# embedded-sqrt

./: Cargo.toml  README.md
src/: lib.rs
